--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,6 +11,7 @@
     font-size: 4rem;
     line-height: 1.2;
     font-weight: bolder;
+    padding-top: 7%;
     /* color: #ffffff; */
 }
 #front_wrap #front_box #front_title div {
