--- a/static/css/all.css
+++ b/static/css/all.css
@@ -1,3 +1,50 @@
+@charset "UTF-8";
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+}
+
+@font-face {
+    font-family: "경기천년제목";
+    src: url('../../fonts/Title_Light.otf'), url('../../fonts/경기천년바탕_Regular.ttf');
+}
+
+@font-face {
+    font-family: "경기천년바탕";
+    src: url('../../fonts/Batang_Regular.otf'), url('../../fonts/Batang_Regular.eot'), url('../../fonts/Batang_Regular.woff'), url('../../fonts/경기천년바탕_Regular.ttf');
+}
+
+@font-face {
+    font-family: 'GyeonggiBatang';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/GyeonggiBatang.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "경기천년볼드";
+    src: url('../../fonts/Batang_Bold.otf'), url('../../fonts/Batang_Bold.eot'), url('../../fonts/Batang_Bold.woff'), url('../../fonts/경기천년바탕_Bold.ttf');
+}
+
+.gg-bold {
+    font-family: "경기천년볼드", serif;
+    font-size: 1rem;
+}
+
+.gg-title {
+    font-family: "경기천년제목", sans-serif;
+    font-size: 1rem;
+}
+
+.gg-batang {
+    font-family: "GyeonggiBatang", sans-serif;
+    font-size: 1rem;
+}
+
+
 body {
     width: 100%;
     position: relative;
