--- a/static/css/all.css
+++ b/static/css/all.css
@@ -31,17 +31,17 @@
 
 .gg-bold {
     font-family: "경기천년볼드", serif;
-    font-size: 1rem;
+    /* font-size: 1rem; */
 }
 
 .gg-title {
     font-family: "경기천년제목", sans-serif;
-    font-size: 1rem;
+    /* font-size: 1rem; */
 }
 
 .gg-batang {
     font-family: "GyeonggiBatang", sans-serif;
-    font-size: 1rem;
+    /* font-size: 1rem; */
 }
 
 
