--- a/static/css/all.css
+++ b/static/css/all.css
@@ -50,11 +50,25 @@ body {
     position: relative;
     /* font-size: 1rem; */
     font-family: '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC', sans-serif;
-    -webkit-touch-callout: none;
+    -webkit-touch-callout: none;    
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
     background-color: rgb(240, 240, 240);
     margin: 0;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.8);
+    cursor: pointer;
+}
+
+[onclick] {
+    cursor: pointer;
 }
