--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,2 +1,29 @@
 /*header*/
+#header_wrap {
+    width: 100%;
+    height: 70px;
+}
+#header_wrap #header_box {
+    display: flex;
+    width: 100%;
+    max-width: 768px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#header_wrap #header_box #header_title {
+    margin: 0 auto;
+    width: 300px;
+    cursor: pointer;
+}
+
+#header_wrap #header_box #header_title h1{
+    background-color: rgb(180, 180, 180);
+    color: transparent;
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.6);
+    -webkit-background-clip: text;
+       -moz-background-clip: text;
+            background-clip: text;
+}
+
 /*menu*/
