--- a/static/css/header.css
+++ b/static/css/header.css
@@ -25,8 +25,19 @@
     color: transparent;
     text-shadow: 2px 2px 3px rgba(255,255,255,0.6);
     -webkit-background-clip: text;
-       -moz-background-clip: text;
-            background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
 }
+
+#header_wrap #header_box #header_btn img{
+    width: 60px;
+    margin: auto 0;
+}
+
+
+
+
+
+
 
 /*menu*/
