--- a/static/css/header.css
+++ b/static/css/header.css
@@ -29,7 +29,7 @@
     background-clip: text;
 }
 
-#header_wrap #header_box #header_btn img{
+#header_wrap #header_box #header_btn a img{
     width: 60px;
     margin: auto 0;
 }
