--- a/static/css/header.css
+++ b/static/css/header.css
@@ -32,6 +32,12 @@
 #header_wrap #header_box #header_btn a .menu_btn{
     width: 60px;
     margin: auto 0;
+    background-color: rgb(180, 180, 180);
+    color: transparent;
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.6);
+    -webkit-background-clip: text;
+       -moz-background-clip: text;
+            background-clip: text;
 }
 
 #header_wrap #header_box #header_btn a .menu_btn .menu_o{
