--- a/static/css/header.css
+++ b/static/css/header.css
@@ -8,6 +8,7 @@
     display: flex;
     width: 100%;
     max-width: 768px;
+    height: 70px;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
