--- a/static/css/header.css
+++ b/static/css/header.css
@@ -12,12 +12,13 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
+    box-shadow: 0 8px 8px -9px rgba(0, 0, 0, 0.5);
 }
 
 #header_wrap #header_box #header_title {
     margin: 0 auto;
     width: 300px;
-    padding-top: 15px;
+    padding-top: 5px;
     font-size: 1.2rem;
     cursor: pointer;
     text-align: center;
@@ -35,7 +36,8 @@
 #header_wrap #header_box #header_btn a .menu_btn{
     width: 60px;
     margin: auto 0;
-    
+    top: -10px;
+    position: relative;
 }
 
 #header_wrap #header_box #header_btn a .menu_btn .menu_o{
