--- a/static/css/header.css
+++ b/static/css/header.css
@@ -12,7 +12,11 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
+    border-bottom: 1px solid rgb(240, 240, 240);
     box-shadow: 0 8px 8px -9px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow:    inset 0 0 10px rgba(0, 0, 0, 0.5);
+   -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+   box-shadow:         inset 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 #header_wrap #header_box #header_title {
