--- a/static/css/header.css
+++ b/static/css/header.css
@@ -15,8 +15,11 @@
     border-bottom: 1px solid rgb(240, 240, 240);
     -moz-box-shadow:    inset 0 0 10px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-    box-shadow:         inset 0 8px 10px -10px rgba(0, 0, 0, 0.5), 0 8px 8px -9px rgba(0, 0, 0, 0.5);
+    box-shadow:         inset 0 8px 10px -10px rgba(0, 0, 0, 0.5);
+    /* box-shadow:         inset 0 8px 10px -10px rgba(0, 0, 0, 0.5), 0 8px 8px -9px rgba(0, 0, 0, 0.5); */
     /* box-shadow: 0 8px 8px -9px rgba(0, 0, 0, 0.5); */
+    padding-bottom: 8px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));;
 }
 
 #header_wrap #header_box #header_title {
