--- a/static/css/header.css
+++ b/static/css/header.css
@@ -13,20 +13,28 @@
     align-items: center;
     margin: 0 auto;
     /* border-bottom: 1px solid rgb(240, 240, 240); */
-    -moz-box-shadow:    inset 0 8px 10px -10px rgba(0, 0, 0, 0.5);
-    -webkit-box-shadow: inset 0 8px 10px -10px rgba(0, 0, 0, 0.5);
-    box-shadow:         inset 0 8px 10px -10px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow:    inset 0 -8px 10px -10px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: inset 0 -8px 10px -10px rgba(0, 0, 0, 0.5);
+    box-shadow:         inset 0 -8px 10px -10px rgba(0, 0, 0, 0.5);
     /* box-shadow:         inset 0 8px 10px -10px rgba(0, 0, 0, 0.5), 0 8px 8px -9px rgba(0, 0, 0, 0.5); */
     /* box-shadow: 0 8px 8px -9px rgba(0, 0, 0, 0.5); */
     padding-bottom: 8px;
     /* background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));; */
-
+    
     border-image-source: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(240, 240, 240, 0));
-
-
-
 }
 
+#header_wrap #header_box:after {
+    
+        content:"";
+        background: -webkit-linear-gradient(left, rgba(92, 7, 52, 1) 0%, rgba(134, 29, 84, 1) 12%, rgba(255, 93, 177, 1) 47%, rgba(83, 0, 30, 1) 100%);
+        display: block;
+        height:10px;
+        /* width: 500px; */
+        position: absolute;
+        bottom: 0;
+    
+}
 #header_wrap #header_box #header_title {
     margin: 0 auto;
     width: 300px;
