--- a/static/css/header.css
+++ b/static/css/header.css
@@ -7,7 +7,7 @@
 #header_wrap #header_box {
     display: flex;
     width: 100%;
-    max-width: 768px;
+    /* max-width: 768px; */
     height: 70px;
     justify-content: space-between;
     align-items: center;
@@ -37,14 +37,16 @@
 #header_wrap #header_box:before {
     content: "";
     position: absolute;
-    left: 0;
-    top: 0;
+    /* left: 0; */
+    top: 70px;
     width: 100%;
-    height: 100px;
-    background: linear-gradient(180deg, rgba(255,229,110,1) 0%, rgba(255,229,110,0.001) 100%);
+    /* max-width: 768px; */
+    margin: 0 auto;
+    height: 10px;
+    background: linear-gradient(180deg,rgba(0,0,0,0.2) 0%,rgba(240, 240, 240, 1) 100%);
     z-index: -1;
     pointer-events: none;
-    transition: 0.2s opacity;
+    transition: .2s opacity;
 }
 
 #header_wrap #header_box #header_title {
