--- a/static/css/header.css
+++ b/static/css/header.css
@@ -46,10 +46,14 @@
     background: linear-gradient(180deg,rgba(0,0,0,0.2) 0%,rgba(240, 240, 240, 1) 100%);
     z-index: -1;
     pointer-events: none;
-    transition: .2s opacity;
+    transition: 0.2s opacity;
 }
 
-#header_wrap #header_box #header_title {
+#header_wrap #header_box #header_box_area {
+    width: 100%;
+    max-width: 768px;
+}
+#header_wrap #header_box #header_box_area #header_title {
     margin: 0 auto;
     width: 300px;
     padding-top: 5px;
@@ -58,7 +62,7 @@
     text-align: center;
 }
 
-#header_wrap #header_box #header_title h1{
+#header_wrap #header_box #header_box_area #header_title h1{
     background-color: rgb(180, 180, 180);
     color: transparent;
     text-shadow: 2px 2px 3px rgba(255,255,255,0.6);
@@ -67,14 +71,14 @@
     background-clip: text;
 }
 
-#header_wrap #header_box #header_btn a .menu_btn{
+#header_wrap #header_box #header_box_area #header_btn a .menu_btn{
     width: 60px;
     margin: auto 0;
     top: -10px;
     position: relative;
 }
 
-#header_wrap #header_box #header_btn a .menu_btn .menu_o{
+#header_wrap #header_box #header_box_area #header_btn a .menu_btn .menu_o{
     font-size: 4.5rem;
     position: absolute;
     background-color: rgb(180, 180, 180);
@@ -84,7 +88,7 @@
             -moz-background-clip: text;
     background-clip: text;
 }
-#header_wrap #header_box #header_btn a .menu_btn .menu_m{
+#header_wrap #header_box #header_box_area #header_btn a .menu_btn .menu_m{
     font-size: 3rem;
     position: relative;
     background-color: rgb(180, 180, 180);
