--- a/static/css/all.css
+++ b/static/css/all.css
@@ -49,7 +49,7 @@ body {
     width: 100%;
     position: relative;
     /* font-size: 1rem; */
-    font-family: '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC', sans-serif;
+    /* font-family: '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC', sans-serif; */
     -webkit-touch-callout: none;    
     -webkit-user-select: none;
     -moz-user-select: none;
