--- a/static/css/header.css
+++ b/static/css/header.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 80px;
     display: none;
+    background-color: rgb(240, 240, 240);
 }
 #header_wrap #header_box {
     display: flex;
