--- a/static/css/header.css
+++ b/static/css/header.css
@@ -3,35 +3,30 @@
     width: 100%;
     height: 80px;
     display: none;
+    z-index: 100;
 }
 #header_wrap #header_box {
     background-color: rgb(240, 240, 240);
     display: flex;
     width: 100%;
-    /* max-width: 768px; */
     height: 70px;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    /* border-bottom: 1px solid rgb(240, 240, 240); */
     -moz-box-shadow:    inset 0 -8px 10px -10px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: inset 0 -8px 10px -10px rgba(0, 0, 0, 0.5);
     box-shadow:         inset 0 -8px 10px -10px rgba(0, 0, 0, 0.5);
-    /* box-shadow:         inset 0 8px 10px -10px rgba(0, 0, 0, 0.5), 0 8px 8px -9px rgba(0, 0, 0, 0.5); */
-    /* box-shadow: 0 8px 8px -9px rgba(0, 0, 0, 0.5); */
     padding-bottom: 8px;
-    /* background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));; */
-    
     border-image-source: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(240, 240, 240, 0));
+    z-index: 100;
+    
 }
 
 #header_wrap #header_box:before {
     content: "";
     position: absolute;
-    /* left: 0; */
     top: 70px;
     width: 100%;
-    /* max-width: 768px; */
     margin: 0 auto;
     height: 30px;
     background: linear-gradient(180deg,rgba(0,0,0,0.2) 0%,rgba(240, 240, 240, 0) 60%);
@@ -46,6 +41,7 @@
     height: 80px;
     margin: 0 auto;
     padding-top: 15px;
+    z-index: 100;
 }
 #header_wrap #header_box #header_box_area #header_title {
     margin: 0 auto;
@@ -65,11 +61,7 @@
     background-clip: text;
 }
 
-/* #header_wrap #header_box #header_box_area #header_btn{
-    position: relative;
-    top: -40px;
-    left: 700px;
-} */
+
 #header_wrap #header_box #header_box_area #header_btn a .menu_btn{
     width: 60px;
     margin: auto 0;
@@ -112,3 +104,9 @@
 
 
 /*menu*/
+#menu_wrap {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgb(240, 240, 240);
+}
