--- a/static/css/header.css
+++ b/static/css/header.css
@@ -115,6 +115,6 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    background-color: rgb(240, 240, 240);
+    /* background-color: rgb(240, 240, 240); */
     display: none;
 }
