--- a/static/css/main.css
+++ b/static/css/main.css
@@ -41,4 +41,15 @@
 
 
 /*detail*/
+#detail_wrap {
+    width: 100%;
+    height: 100%;
+    background-color: #555;
+}
+
 /*map*/
+#map_wrap {
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+}
