--- a/static/css/header.css
+++ b/static/css/header.css
@@ -13,16 +13,20 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    -moz-box-shadow:    inset 0 -8px 10px -10px rgba(0, 0, 0, 0.5);
+    /* -moz-box-shadow:    inset 0 -8px 10px -10px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: inset 0 -8px 10px -10px rgba(0, 0, 0, 0.5);
     box-shadow:         inset 0 -8px 10px -10px rgba(0, 0, 0, 0.5);
     padding-bottom: 8px;
-    border-image-source: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(240, 240, 240, 0));
+    border-image-source: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(240, 240, 240, 0)); */
     z-index: 100;
+
+    border-bottom: 20px solid;
+    border-image-source: linear-gradient(180deg, rgba(240, 240, 240, 0) 0%, rgba(240, 240, 240, 0) 99%, rgba(0, 0, 0, 0.01) 98.5%, rgb(255,255,255) 99.3%, rgba(0,0,0, 0.08) 99.9%, rgba(0,0,0, 0) 100%);
+    border-image-slice: 1;
     
 }
 
-#header_wrap #header_box:before {
+/* #header_wrap #header_box:before {
     content: "";
     position: absolute;
     top: 70px;
@@ -33,7 +37,7 @@
     z-index: -1;
     pointer-events: none;
     transition: 0.2s opacity;
-}
+} */
 
 #header_wrap #header_box #header_box_area {
     width: 100%;
@@ -46,7 +50,7 @@
 #header_wrap #header_box #header_box_area #header_title {
     margin: 0 auto;
     width: 476px;
-    padding-top: 5px;
+    padding-top: 10px;
     font-size: 1.2rem;
     cursor: pointer;
     text-align: center;
@@ -65,7 +69,7 @@
 #header_wrap #header_box #header_box_area #header_btn{
     width: 60px;
     margin: auto 0;
-    top: -50px;
+    top: -55px;
     left: 700px;
     position: relative;
 }
@@ -127,13 +131,11 @@
 }
 
 #menu_wrap #menu_box #menu_list .menu_list_item{
-    padding-bottom: 20px;
-    /* -moz-box-shadow:    inset 0 -8px 10px -10px rgba(0, 0, 0, 0.5);
-    -webkit-box-shadow: inset 0 -8px 10px -10px rgba(0, 0, 0, 0.5);
-    box-shadow:         inset 0 -8px 10px -10px rgba(0, 0, 0, 0.5);
-    border-image-source: linear-gradient(to bottom, rgba(240, 240, 240, 0), rgba(240, 240, 240, 0.5)); */
-    
-    margin-bottom: 30px;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 20px solid;
+    border-image-source: linear-gradient(180deg, rgba(240, 240, 240, 0) 0%, rgba(240, 240, 240, 0) 99%, rgba(0, 0, 0, 0.01) 98.5%, rgb(255,255,255) 99.3%, rgba(0,0,0, 0.08) 99.9%, rgba(0,0,0, 0) 100%);
+    border-image-slice: 1;
 }
 
 /* #menu_wrap #menu_box #menu_list .menu_list_item:before {
@@ -158,6 +160,7 @@
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
+    padding-left: 40px;
 
 }
 
