--- a/static/css/header.css
+++ b/static/css/header.css
@@ -142,11 +142,11 @@
     /* border-bottom: 20px solid;
     border-image-source: linear-gradient(180deg, rgba(240, 240, 240, 0) 0%, rgba(240, 240, 240, 0) 99%, rgba(0, 0, 0, 0.01) 98.5%, rgb(255,255,255) 99.3%, rgba(0,0,0, 0.08) 99.9%, rgba(0,0,0, 0) 100%);
     border-image-slice: 1; */
-    border-bottom: 10px solid;
+    /* border-bottom: 10px solid;
     -webkit-border-image: url(../img/intaglio_line.png);
     -moz-border-image: url(../img/intaglio_line.png);
     border-image: url(../img/intaglio_line.png);
-    border-image-slice: 30;
+    border-image-slice: 30; */
 }
 
 /* #menu_wrap #menu_box #menu_list .menu_list_item:before {
@@ -171,8 +171,8 @@
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
-    padding-left: 40px;
-
+    padding-left: 20px;
+    margin-bottom: 15px;
 }
 
 
