--- a/static/css/header.css
+++ b/static/css/header.css
@@ -188,12 +188,24 @@
 #place_cont_wrap {
     display: none;
 }
+
+#place_cont_wrap #place_cont {
+    /* text-indent: 1rem; */
+    color: rgba(0, 0, 0, 0.8);
+}
+
 #place_cont_wrap #place_cont #place_ul {
-    
     width: 100%;
     height: auto;
     overflow: hidden;
     position: relative;
+}
+#place_cont_wrap #place_cont #place_ul .place_li {
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-bottom: 20px;
+    float: left;
+    padding: 10px 0;
 }
 
 
