--- a/static/css/main.css
+++ b/static/css/main.css
@@ -69,4 +69,9 @@
     top: 0;
     bottom: 0;
     width: 100%;
+    height: 100%;
+}
+#map .mapboxgl-canvas {
+    width: 100%;
+    height: 100%;
 }
