--- a/static/css/main.css
+++ b/static/css/main.css
@@ -72,6 +72,6 @@
     height: 100%;
 }
 #map .mapboxgl-canvas {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: calc(100vh - 70px);
 }
