--- a/static/css/main.css
+++ b/static/css/main.css
@@ -72,6 +72,7 @@
     height: 100%;
 }
 #map .mapboxgl-canvas {
-    width: 100vw;
-    height: calc(100vh - 70px);
+    /* width: 100vw;
+    height: calc(100vh - 70px); */
+    left: 0;
 }
