--- a/static/css/main.css
+++ b/static/css/main.css
@@ -61,7 +61,8 @@
     background-color: #999;
     left: 0;
     z-index: -5;
-    display: none;
+    /* display: none; */
+    visibility: hidden;
 }
 
 #map {
@@ -74,5 +75,7 @@
 #map .mapboxgl-canvas {
     /* width: 100vw;
     height: calc(100vh - 70px); */
+    width: 100%;
+    height: 100%;
     left: 0;
 }
