--- a/static/css/header.css
+++ b/static/css/header.css
@@ -171,7 +171,7 @@
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
-    padding-left: 20px;
+    /* padding-left: 20px; */
     margin-bottom: 15px;
 }
 
