--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,4 +1,4 @@
-/*header*/
+/****header****/
 #header_wrap {
     width: 100%;
     height: 80px;
@@ -121,7 +121,7 @@
 
 
 
-/*menu*/
+/****menu****/
 #menu_wrap {
     width: 100%;
     height: 100%;
