--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,4 @@
-/*front*/
+/****front****/
 #front_wrap {
     width: 100%;
     height: 100%;
@@ -40,7 +40,7 @@
 
 
 
-/*detail*/
+/****detail****/
 #detail_wrap {
     width: 100%;
     height: calc(100vh - 70px);
@@ -48,11 +48,16 @@
     top: 70px;
     background-color: #777;
     left: 0;
-    z-index: -5;
+    /* z-index: -5; */
     display: none;
 }
 
-/*map*/
+
+
+
+
+
+/****map****/
 #map_wrap {
     width: 100%;
     height: calc(100vh - 70px);
