--- a/static/css/all.css
+++ b/static/css/all.css
@@ -72,3 +72,12 @@ a {
 [onclick] {
     cursor: pointer;
 }
+
+.tooling {
+    background-color: rgb(180, 180, 180);
+    color: transparent;
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.6);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+}
