--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,7 +56,7 @@
     width: 100%;
     max-width: 768px;
     margin: 0 auto;
-    text-align: center;
+    /* text-align: center; */
 }
 
 #detail_wrap #detail_box #detail_marker{
@@ -118,7 +118,7 @@
     max-width: 768px;
     min-height: 80px;
     margin: 0 auto;
-    text-align: center;
+    /* text-align: center; */
     padding-bottom: 20px;
 }
 #detail_wrap #detail_box #detail_work p.work_title, 
