--- a/static/css/main.css
+++ b/static/css/main.css
@@ -57,6 +57,7 @@
     max-width: 768px;
     margin: 0 auto;
     margin-top: 120px;
+    color: #999;
 }
 
 #detail_wrap #detail_box #detail_marker{
