--- a/static/css/header.css
+++ b/static/css/header.css
@@ -126,7 +126,7 @@
     width: 100%;
     height: 100%;
     z-index: 99;
-    /* background-color: rgb(240, 240, 240); */
+    background-color: rgb(240, 240, 240);
     display: none;
 }
 #menu_wrap #menu_box {
