--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,9 @@
 /****front****/
+
+
+#front_wrap * {
+    z-index: 999;
+}
 #front_wrap {
     width: 100%;
     height: 100%;
@@ -42,6 +47,10 @@
 
 
 /****detail****/
+
+#detail_wrap * {
+z-index: 80;
+}
 #detail_wrap {
     width: 100%;
     height: calc(100vh - 70px);
