--- a/static/css/header.css
+++ b/static/css/header.css
@@ -122,17 +122,17 @@
 
 
 /****menu****/
-nav {
+/* nav {
     height: calc(100vh - 70px);
     width: 100vw;
-
-}
-nav * {
+    
+} */
+#menu_wrap * {
     z-index: 99;
 }
 #menu_wrap {
-    width: 100%;
-    height: 100%;
+    width: 100%vw
+    height: calc(100vh - 70px);
     z-index: 99;
     background-color: rgb(240, 240, 240);
     display: none;
