--- a/static/css/header.css
+++ b/static/css/header.css
@@ -131,8 +131,10 @@
     z-index: 99;
 }
 #menu_wrap {
-    width: 100vw;
-    height: calc(100vh - 70px);
+    /* width: 100vw;
+    height: calc(100vh - 70px); */
+    width: 100%;
+    height: 100%;
     z-index: 99;
     background-color: rgb(240, 240, 240);
     display: none;
