--- a/static/css/header.css
+++ b/static/css/header.css
@@ -66,7 +66,7 @@
 #header_wrap #header_box #header_box_area #header_title h1{
     background-color: rgb(180, 180, 180);
     color: transparent;
-    text-shadow: 2px 2px 3px rgba(255,255,255,0.6);
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.4);
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
@@ -98,7 +98,7 @@
     position: absolute;
     background-color: rgb(180, 180, 180);
     color: transparent;
-    text-shadow: 2px 2px 3px rgba(255,255,255,0.6);
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.4);
         -webkit-background-clip: text;
             -moz-background-clip: text;
     background-clip: text;
@@ -108,7 +108,7 @@
     position: relative;
     background-color: rgb(180, 180, 180);
     color: transparent;
-    text-shadow: 2px 2px 3px rgba(255,255,255,0.6);
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.4);
     -webkit-background-clip: text;
         -moz-background-clip: text;
             background-clip: text;
@@ -128,10 +128,15 @@
 }
 #menu_wrap {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    height: calc(100vh - 70px);
     z-index: 99;
     background-color: rgb(240, 240, 240);
+    position: absolute;
+    top: 70px;
+    left: 0;
     display: none;
+
 }
 #menu_wrap #menu_box {
     width: 100%;
@@ -172,7 +177,7 @@
 #menu_wrap #menu_box #menu_list .menu_list_item a h2 {
     /* background-color: rgb(180, 180, 180);
     color: transparent;
-    text-shadow: 2px 2px 3px rgba(255,255,255,0.6);
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.4);
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text; */
