--- a/static/css/header.css
+++ b/static/css/header.css
@@ -57,10 +57,13 @@
 #header_wrap #header_box #header_box_area #header_title {
     margin: 0 auto;
     width: 476px;
-    padding-top: 7px;
+    /* padding-top: 7px; */
     font-size: 1.2rem;
     cursor: pointer;
     text-align: center;
+}
+#header_wrap #header_box #header_box_area #header_title .header_logo {
+   height: 55px;
 }
 
 #header_wrap #header_box #header_box_area #header_title h1{
@@ -76,7 +79,8 @@
 #header_wrap #header_box #header_box_area #header_btn{
     width: 60px;
     margin: auto 0;
-    top: -55px;
+    /* top: -55px; */
+    top: -68px;
     left: 700px;
     position: relative;
 }
