--- a/static/css/header.css
+++ b/static/css/header.css
@@ -62,7 +62,7 @@
     cursor: pointer;
     text-align: center;
 }
-#header_wrap #header_box #header_box_area #header_title .header_logo {
+#header_wrap #header_box #header_box_area #header_title a .header_logo {
    height: 55px;
 }
 
