--- a/static/css/header.css
+++ b/static/css/header.css
@@ -83,6 +83,7 @@
     top: -68px;
     left: 700px;
     position: relative;
+    filter: opacity(0.7);
 }
 /* #header_wrap #header_box #header_box_area #header_btn a #menu_btn{
     width: 60px;
