--- a/static/css/all.css
+++ b/static/css/all.css
@@ -7,7 +7,7 @@
     -webkit-font-smoothing: antialiased;
 }
 
-/* @font-face {
+@font-face {
     font-family: "경기천년제목";
     src: url('../../fonts/Title_Light.otf'), url('../../fonts/경기천년바탕_Regular.ttf');
 }
@@ -27,7 +27,7 @@
 @font-face {
     font-family: "경기천년볼드";
     src: url('../../fonts/Batang_Bold.otf'), url('../../fonts/Batang_Bold.eot'), url('../../fonts/Batang_Bold.woff'), url('../../fonts/경기천년바탕_Bold.ttf');
-} */
+}
 @font-face {
     font-family: "또박또박";
     src: url('../../fonts/NanumDdoBagDdoBag.woff'), url('../../fonts/NanumDdoBagDdoBag.eot'), url('../../fonts/NanumDdoBagDdoBag.ttf');
