--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -1,10 +1,15 @@
 /****header****/
+
 #header_wrap #header_box #header_box_area #header_login {
     position: absolute;
     width: 100%;
     max-width: 200px;
+    padding-left: 5px;
 }
+
+
 /****menu****/
+
 .menu_btn_wrap {
     position: relative;
     display: grid;
@@ -15,13 +20,16 @@
 #menu_place_btn {
     position: relative;
 }
+
 #add_intro,
 #add_place {
     font-size: 2rem;
     font-weight: bolder;
     position: relative;
 }
+
+
 /****main****/
+
+
 /****footer****/
-
-
