--- a/static/css/all.css
+++ b/static/css/all.css
@@ -7,7 +7,8 @@
     -webkit-font-smoothing: antialiased;
 }
 
-@font-face {
+
+/* @font-face {
     font-family: "경기천년제목";
     src: url('../../fonts/Title_Light.otf'), url('../../fonts/경기천년바탕_Regular.ttf');
 }
@@ -27,7 +28,8 @@
 @font-face {
     font-family: "경기천년볼드";
     src: url('../../fonts/Batang_Bold.otf'), url('../../fonts/Batang_Bold.eot'), url('../../fonts/Batang_Bold.woff'), url('../../fonts/경기천년바탕_Bold.ttf');
-}
+} */
+
 @font-face {
     font-family: "또박또박";
     src: url('../../fonts/NanumDdoBagDdoBag.woff'), url('../../fonts/NanumDdoBagDdoBag.eot'), url('../../fonts/NanumDdoBagDdoBag.ttf');
@@ -45,6 +47,7 @@
 .gg-batang {
     font-family: "GyeonggiBatang", sans-serif;
 } */
+
 .gg-bold {
     font-family: "또박또박", serif;
 }
@@ -57,13 +60,12 @@
     font-family: "또박또박", sans-serif;
 }
 
-
 body {
     width: 100%;
     position: relative;
     /* font-size: 1rem; */
     /* font-family: '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC', sans-serif; */
-    -webkit-touch-callout: none;    
+    -webkit-touch-callout: none;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -89,7 +91,7 @@ a {
 .tooling {
     background-color: rgb(180, 180, 180);
     color: transparent;
-    text-shadow: 2px 2px 3px rgba(255,255,255,0.4);
+    text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.4);
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
