--- a/static/css/header.css
+++ b/static/css/header.css
@@ -158,7 +158,7 @@
 #menu_wrap #menu_box #menu_list .menu_list_item {
     padding-bottom: 15px;
     margin-bottom: 15px;
-    font-size: 1.5rem;
+    /* color: rgba(0, 0, 0, 0.6); */
     /* border-bottom: 20px solid;
     border-image-source: linear-gradient(180deg, rgba(240, 240, 240, 0) 0%, rgba(240, 240, 240, 0) 99%, rgba(0, 0, 0, 0.01) 98.5%, rgb(255,255,255) 99.3%, rgba(0,0,0, 0.08) 99.9%, rgba(0,0,0, 0) 100%);
     border-image-slice: 1; */
@@ -167,6 +167,11 @@
     -moz-border-image: url(../img/intaglio_line.png);
     border-image: url(../img/intaglio_line.png);
     border-image-slice: 30; */
+}
+
+#menu_wrap #menu_box #menu_list .menu_list_item>a>h2 {
+    font-size: 1.5rem;
+    color: rgba(0, 0, 0, 0.6);
 }
 
 
