--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -16,6 +16,11 @@
     grid-template-columns: max-content min-content;
 }
 
+#menu_wrap #menu_box #menu_list .menu_list_item .menu_btn_wrap>div>a>h2 {
+    font-size: 2.3rem;
+    color: rgba(0, 0, 0, 0.5);
+}
+
 #menu_intro_btn,
 #menu_place_btn {
     position: relative;
