--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -16,7 +16,8 @@
     grid-template-columns: max-content min-content;
 }
 
-#menu_wrap #menu_box #menu_list .menu_list_item .menu_btn_wrap>div>a>h2 {
+#menu_wrap #menu_box #menu_list .menu_list_item .menu_btn_wrap>div>a>h2,
+#menu_wrap #menu_box #menu_list .menu_list_item .menu_btn_wrap>div.menu_add>a {
     font-size: 2.3rem;
     color: rgba(0, 0, 0, 0.5);
 }
