admin header func

--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -7,6 +7,28 @@
     padding-left: 5px;
 }
 
+#header_wrap #header_box #header_box_area #header_ad_title {
+    margin: 0 auto;
+    /* width: 476px; */
+    /* padding-top: 7px; */
+    font-size: 1.2rem;
+    cursor: pointer;
+    text-align: center;
+}
+
+#header_wrap #header_box #header_box_area #header_ad_title a .header_logo {
+    height: 55px;
+}
+
+#header_wrap #header_box #header_box_area #header_ad_title h1 {
+    background-color: rgb(180, 180, 180);
+    color: transparent;
+    text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.4);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+}
+
 
 /****menu****/
 
