--- a/static/css/header.css
+++ b/static/css/header.css
@@ -240,4 +240,7 @@
     text-align: center;
     padding-top: 20px;
     cursor: pointer;
+    position: absolute;
+    bottom: 20px;
+    color: rgba(0, 0, 0, 0.5);
 }
