--- a/static/css/header.css
+++ b/static/css/header.css
@@ -237,10 +237,12 @@
 
 #lang_select {
     width: 100%;
+    max-width: 700px;
     text-align: center;
     padding-top: 20px;
     cursor: pointer;
-    position: absolute;
-    bottom: 20px;
+    position: fixed;
+    bottom: 80px;
     color: rgba(0, 0, 0, 0.5);
+    margin: 0 auto;
 }
