--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -56,6 +56,18 @@
     position: relative;
 }
 
+#menu_wrap #manu_box .menu_lang {
+    width: 100%;
+    max-width: 700px;
+    text-align: center;
+    padding-top: 20px;
+    cursor: pointer;
+    position: fixed;
+    bottom: 80px;
+    color: rgba(0, 0, 0, 0.5);
+    margin: 0 auto;
+}
+
 
 /****main****/
 
