--- a/static/css/header.css
+++ b/static/css/header.css
@@ -127,6 +127,15 @@
     left: 11px;
 }
 
+#header_wrap .header_lang {
+    padding-top: 10px;
+    padding-left: 5px;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    color: rgba(0, 0, 0, 0.5);
+}
+
 
 /****menu****/
 
@@ -233,16 +242,4 @@
     margin-bottom: 20px;
     float: left;
     padding: 10px 0;
-}
-
-#lang_select {
-    width: 100%;
-    max-width: 700px;
-    text-align: center;
-    padding-top: 20px;
-    cursor: pointer;
-    position: fixed;
-    bottom: 80px;
-    color: rgba(0, 0, 0, 0.5);
-    margin: 0 auto;
 }
