--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -56,7 +56,7 @@
     position: relative;
 }
 
-#menu_wrap #manu_box #menu_box_area .menu_lang {
+#menu_wrap #menu_box #menu_box_area .menu_lang {
     width: 100%;
     max-width: 700px;
     text-align: center;
