--- a/static/css/all.css
+++ b/static/css/all.css
@@ -80,7 +80,7 @@ ul {
 
 a {
     text-decoration: none;
-    /* color: rgba(255, 255, 255, 0.8); */
+    color: rgba(0, 0, 0, 0.5);
     cursor: pointer;
 }
 
