--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,12 +1,16 @@
 /****header****/
 
+header {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+}
+
 #header_wrap {
     width: 100%;
     height: 80px;
     display: none;
     z-index: 100;
-    position: sticky;
-    top: 0;
 }
 
 #header_wrap #header_box {
