--- a/static/css/header.css
+++ b/static/css/header.css
@@ -10,9 +10,9 @@
     height: 80px;
     display: none;
     z-index: 100;
-    position: -webkit-sticky;
+    /* position: -webkit-sticky;
     position: sticky;
-    top: 0;
+    top: 0; */
 }
 
 #header_wrap #header_box {
