--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -72,5 +72,12 @@
 
 /****main****/
 
+section .view_wrap {
+    width: 100%;
+    max-width: 596px;
+    margin: 0 auto;
+    margin-top: 80px;
+}
+
 
 /****footer****/
