--- a/static/css/header.css
+++ b/static/css/header.css
@@ -241,13 +241,12 @@
     width: 100%;
     height: auto;
     /* overflow: hidden; */
-    position: relative;
+    /* position: relative; */
 }
 
 #place_list_wrap #place_list #place_ul .place_li {
-    margin-right: 5px;
-    margin-left: 5px;
-    margin-bottom: 20px;
-    float: left;
-    padding: 10px 0;
+    margin: 0 5px;
+    /* float: left; */
+    padding: 5px 0;
+    cursor: pointer;
 }
