--- a/static/css/main.css
+++ b/static/css/main.css
@@ -43,6 +43,16 @@
             background-clip: text;
 }
 
+#front_wrap #front_box #lang_select {
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr 1fr;
+    font-size: 1rem;
+    max-width: 250px;
+    margin: 0 auto;
+}
+
+
 
 
 
